[package]
name = "pngme"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for hiding messages in PNG files."
readme = "README.md"
repository = "https://github.com/Ch1n3du/pngme"
license = "MIT"
keywords = ["png"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "1.8.1"
clap = { version = "3.1.5", features = ["derive"] }